--- a/src/components/EditarVideo/EditarVideo.css
+++ b/src/components/EditarVideo/EditarVideo.css
@@ -58,12 +58,12 @@
 }
 
 .campo-texto-edit label,
- .campo-select-edit label {
+.campo-select-edit label {
     font-size: 20px;
 }
 
 .campo-texto-edit input,
- .campo-select-edit select {
+.campo-select-edit select {
     font-size: 20px;
     color: #fff;
     padding: 10px;
@@ -115,4 +115,42 @@
     color: #fff;
     cursor: pointer;
     width: 180px;
+}
+
+@media(max-width:500px) {
+
+
+    .modal-content {
+        padding: 20px;
+    }
+
+    .formulario-edit-container h3 {
+        font-size: 30px;
+    }
+
+    .formulario-editar-video {
+        gap: 10px;
+    }
+
+    .campo-texto-edit,
+    .campo-select-edit {
+        gap: 5px;
+    }
+
+    .campo-texto-edit input,
+    .campo-select-edit select,
+    .text-area-edit textarea {
+        font-size: 16px;
+    }
+
+    .campo-texto-edit label,
+    .campo-select-edit label,
+    .text-area-edit label {
+        font-size: 16px;
+    }
+
+    .boton-container-edit button {
+        width: 150px;
+        font-size: 16px;
+    }
 }
